Fixed white space around website

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
     width: 100%;
     height: 100vh;
     display: flex;
